Changes in trunk
================

* sphinx.application: Support a new method, ``add_crossref_type``.
  It works like ``add_description_unit`` but the directive will only
  create a target and no output.

* sphinx.ext.autodoc: Don't check ``__module__`` for explicitly given
  members.  Remove "self" in class constructor argument list.

* sphinx.environment: Don't swallow TOC entries when resolving subtrees.

* sphinx.directives: Allow giving a different title to documents
  in the toctree.

* sphinx.directives: Allow giving multiple options in a ``cmdoption``
  directive.

* sphinx.directives: Fix display of class members without explicit
  class name given.

* sphinx.roles: Fix referencing glossary terms with explicit targets.

* sphinx.builder, sphinx.environment: Gracefully handle some exception
  cases.

* sphinx.config: The config file itself can be an extension (if it
  provides a setup() function).

* sphinx.htmlwriter: Don't use os.path for joining image HREFs.


Release 0.1.61950 (Mar 26, 2008)
================================

* sphinx.quickstart: Fix format string for Makefile.


Release 0.1.61945 (Mar 26, 2008)
================================

* sphinx.htmlwriter, sphinx.latexwriter: Support the ``.. image::``
  directive by copying image files to the output directory.

* sphinx.builder: Consistently name "special" HTML output directories
  with a leading underscore; this means ``_sources`` and ``_static``.

* sphinx.environment: Take dependent files into account when collecting
  the set of outdated sources.

* sphinx.directives: Record files included with ``.. literalinclude::``
  as dependencies.

* sphinx.ext.autodoc: Record files from which docstrings are included
  as dependencies.

* sphinx.builder: Rebuild all HTML files in case of a template change.

* sphinx.builder: Handle unavailability of TOC relations (previous/
  next chapter) more gracefully in the HTML builder.

* sphinx.latexwriter: Include fncychap.sty which doesn't seem to be